--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="left">logoasdaasdasda
+    <div class="left">
         <div id="bandeau">
-            <div id="logo-odin"><img src="odin-lined.png" alt="Odin, es-tu là?">
+            <div ><img src="odin-lined.png" id="logo-odin" alt="Odin, es-tu là?">
                 
             </div>
             <p id="odin" ">ODIN</p>
